--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://manish1859.github.io/Election/",
-
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
@@ -33,6 +30,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "serve": "^14.2.4",
     "vite": "^7.0.4"
