--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,8 @@
-# title: My Site
-# description: A simple Jekyll site
-# baseurl: ""
-# url: "https://manish1859.github.io/Election/"
-# theme: minima
-
-# with:
-#   jekyll_src: docs 
 title: My Site
 description: A simple Jekyll site
 baseurl: ""
 url: "https://manish1859.github.io/Election/"
 theme: minima
+
+with:
+  jekyll_src: . 
